# triathlon

./: .gitignore  CMakeLists.txt  README.md
include/: athlete.h  team.h  triathlon.h
src/: athlete.cu  main.cu  main.exp  team.cu  triathlon.cu
